--- a/client/index.html
+++ b/client/index.html
@@ -9,10 +9,40 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cv Builder</title>
+    <style>
+      #preloader {
+        position: fixed;
+        inset: 0;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+      }
+
+      .spinner {
+        width: 60px;
+        height: 60px;
+        border: 6px solid #ccc;
+        border-top-color: #1976d2;
+        border-radius: 50%;
+        animation: spin 0.8s linear infinite;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
+    <script defer type="module" src="/src/main.tsx"></script>
   </head>
   <body>
+    <div id="preloader">
+      <div class="spinner"></div>
+    </div>
+
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
 
