--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
       }
     </style>
     <script defer type="module" src="/src/main.tsx"></script>
+    <script defer src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
     <div id="preloader">
